--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@astrojs/check": "^0.9.1",
     "@astrojs/db": "^0.12.0",
+    "@astrojs/react": "^3.6.1",
     "@astrojs/sitemap": "^3.1.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.13.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "^5.5.4"
   }
 }
