--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.1",
+    "@astrojs/node": "^8.3.2",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.13.1",
     "typescript": "^5.5.4"
