--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.2",
+    "@astrojs/db": "^0.12.0",
     "@astrojs/node": "^8.3.2",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.13.3",
