--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && ASTRO_DATABASE_FILE=./src/data/TechBash2024.db   astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
