--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.2",
     "@astrojs/db": "^0.13.1",
+    "@astrojs/mdx": "^3.1.4",
     "@astrojs/node": "^8.3.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.1.6",
