--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "clean": "rm -rf .astro && rm -rf dist",
+    "build": "npm run clean && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
