--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@astrojs/node": "^8.3.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.1.6",
+    "@auth/core": "^0.32.0",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.14.5",
+    "auth-astro": "^4.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.5.4"
