--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/db": "^0.14.0",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.14.6",
     "typescript": "^5.5.4"
