--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "astro dev",
     "start": "astro dev",
     "clean": "rm -rf .astro && rm -rf dist",
-    "build": "npm run clean && astro check && astro build",
+    "build": "npm run clean && astro check && ASTRO_DATABASE_FILE=./src/data/TechBash2024.db astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/db": "^0.14.0",
+    "@astrojs/node": "^8.3.3",
     "@astrojs/sitemap": "^3.1.6",
     "astro": "^4.14.6",
     "typescript": "^5.5.4"
